--- a/src/index.html
+++ b/src/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
 <html lang="en">
-@@include('html/head.html', {
+@@include('head.html', {
     "title":"Главная"
 })
 <body>
     <div class="wrapper">
-        @@include('html/header.html',{})
+        @@include('header.html',{})
         <main></main>
-        @@include('html/footer.html',{})
+        @@include('footer.html',{})
     </div>  
     <script src="js/app.min.js"></script>
-    @@include('_popup.html', {})
     @@include('_js.html', {})
 </body>
 </html>
