--- a/src/header.html
+++ b/src/header.html
@@ -1,5 +1,5 @@
 <header class="header">
-    <div class="header__content _container">
+    <div class="header__content">
         <div class="header__menu menu">
             <div class="menu__icon icon-menu">
                 <span></span>
