--- a/src/index.html
+++ b/src/index.html
@@ -5,11 +5,11 @@
 })
 <body>
     <div class="wrapper">
-        @@include('header.html',{})
-        <main></main>
+        @@include('_header.html',{})
+        <main class="page"></main>
         @@include('footer.html',{})
     </div>  
-    <script src="js/app.min.js"></script>
+    <!--<script src="js/app.min.js"></script>-->
     @@include('_js.html', {})
 </body>
 </html>
