_js.html and index

--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,19 @@
 <body>
     <div class="wrapper">
         @@include('_header.html',{})
-        <main class="page"></main>
+        <main class="page">
+            <div class="hello">
+                <div class="hello__container _container">
+                    <div class="hello__content">
+                        <h1 class="hello__title title"></h1>
+                        <div class="hello__text text">
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum minus, aut aspernatur sit perspiciatis doloremque ex illum itaque provident minima incidunt, iste, cumque libero hic.
+                        </div>
+                        <a href="" class="hello-btn btn"></a>
+                    </div>
+                </div>
+            </div> 
+        </main>
         @@include('footer.html',{})
     </div>  
     <!--<script src="js/app.min.js"></script>-->
