--- a/src/index.html
+++ b/src/index.html
@@ -14,7 +14,10 @@
                         <div class="hello__text text">
                             Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum minus, aut aspernatur sit perspiciatis doloremque ex illum itaque provident minima incidunt, iste, cumque libero hic.
                         </div>
-                        <a href="" class="hello-btn btn"></a>
+                        <a href="" class="hello__btn btn">Download Resume</a>
+                    </div>
+                    <div class="hello__avatar">
+                        <img src="img/avatar.jpeg" alt="">
                     </div>
                 </div>
             </div> 
