--- a/src/footer.html
+++ b/src/footer.html
@@ -1,1 +1,11 @@
-<footer></footer>
+<footer class="footer">
+    <div class="footer__content _container">
+        <div class="footer__social social">
+            <a href="" class="social__item _icon-facebook"></a>
+            <a href="" class="social__item _icon-instagram"></a>
+            <a href="" class="social__item _icon-twitter"></a>
+            <a href="" class="social__item _icon-youtube"></a>
+        </div>
+        <div class="footer__copy">Copyright 2020 All rights reserved</div>
+    </div>
+</footer>
