--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,7 @@
             <section class="featured-works">
                 <div class="featured-works__container _container">
                     <div class="featured-works__title title-posts">Featured works</div>
-                    <div class="works">
+                    <div class="featured-works__items works">
                         <article class="works__item">
                             <a href="" class="works__image _ibg">
                                 <img src="img/works/01.jpg" alt="Works #1">
