--- a/src/_header.html
+++ b/src/_header.html
@@ -8,9 +8,9 @@
             </div>
             <nav class="menu__body">
                 <ul class="menu__list">
-                    <li><a href="" class="menu__link">Works</a></li>
-                    <li><a href="" class="menu__link">Blog</a></li>
-                    <li><a href="" class="menu__link">Contacts</a></li>
+                    <li><a href="" class="menu__link @@if(link==1){_active}">Works</a></li>
+                    <li><a href="" class="menu__link @@if(link==2){_active}">Blog</a></li>
+                    <li><a href="" class="menu__link @@if(link==3){_active}">Contacts</a></li>
                 </ul>
             </nav>
         </div>
