--- a/src/blog.html
+++ b/src/blog.html
@@ -5,9 +5,7 @@
 })
 <body>
     <div class="wrapper">
-        @@include('_header.html',{
-            "link":"0"
-        })
+        @@include('_header.html',{"link":"2"})
         <main class="page">
             <section class="hello">
                 <div class="hello__container _container">
