--- a/src/blog.html
+++ b/src/blog.html
@@ -7,112 +7,24 @@
     <div class="wrapper">
         @@include('_header.html',{"link":"2"})
         <main class="page">
-            <section class="hello">
-                <div class="hello__container _container">
-                    <div class="hello__content">
-                        <h1 class="hello__title title">Hi, I am Sponge Bob,<br>Creative Technologist</h1>
-                        <div class="hello__text text">
-                            Lorem ipsum dolor sit amet consectetur, adipisicing elit. Dolorum minus, aut aspernatur sit perspiciatis doloremque ex illum itaque provident minima incidunt, iste, cumque libero hic.
+            <div class="blog page__container _container">
+                <h1 class="blog__title title">Blog</h1>
+                <div class="blog__items">
+                    <div class="blog__item">
+                        <a href="" class="blog__article-name">UI Interaction of the Week</a>
+                        <div class="blog__info">
+                            <div class="blog__date">12 Feb 2019</div>
+                            <span class="blog__separator">|</span>
+                            <div class="blog__category">Express, Handlebars</div>
                         </div>
-                        <a href="" class="hello__btn btn">Download Resume</a>
-                    </div>
-                    <div class="hello__avatar">
-                        <img src="img/avatar.jpeg" alt="">
-                    </div>
-                </div>
-            </section>
-            <section class="recent-posts">
-                <div class="recent-posts__container _container">
-                    <div class="recent-posts__header">
-                        <div class="recent-posts__title  title-posts">Recent posts</div>
-                        <div class="recent-posts__view-all">View all</div>
-                    </div>
-                    <div class="recent-posts__items">
-                        <div class="recent-posts__column">
-                            <article class="recent-posts__item recent-post">
-                                <a class="recent-post__title">Making a design system from scratch</a>
-                                <div class="recent-post__info">12 feb 2022 <span>|</span> Design, pattern</div>
-                                <div class="recent-post__text text">
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                                     Eaque id molestias quos dolore. Culpa dolorum sunt fuga eaque.
-                                     Lorem ipsum dolor sit amet consectetur adipisicing elit. Voluptatum, fuga.
-                                     Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                                     Eaque id molestias quos dolore. Culpa dolorum sunt fuga eaque.
-                                </div>
-                            </article>
-                        </div>
-                        
-                        <div class="recent-posts__column">
-                            <article class="recent-posts__item recent-post">
-                                <a class="recent-post__title">Making a design system from scratch</a>
-                                <div class="recent-post__info">12 feb 2022 <span>|</span> Design, pattern</div>
-                                <div class="recent-post__text text">
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit.
-                                     Eaque id molestias quos dolore. Culpa dolorum sunt fuga eaque.
-                                </div>
-                            </article>
+                        <div class="blog__text text">
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Vel assumenda eius tempore deleniti. 
+                            Facilis velit tenetur quae enim deleniti maxime voluptatum! Voluptatem, dolorum. 
+                            Dignissimos, voluptatibus?
                         </div>
                     </div>
                 </div>
-            </section> 
-            <section class="featured-works">
-                <div class="featured-works__container _container">
-                    <div class="featured-works__title title-posts">Featured works</div>
-                    <div class="featured-works__items works">
-                        <article class="works__item">
-                            <a href="" class="works__image _ibg">
-                                <img src="img/works/01.jpg" alt="Works #1">
-                            </a>
-                            <div class="works__body">
-                                <div class="works__title">Designing Dashboards</div>
-                                <div class="works__info">
-                                    <div class="works__year">2020</div>
-                                    <div class="works__category">Dashboard</div>
-                                </div>
-                                <div class="works__text text">
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                                    Fuga dolorum suscipit, architecto nemo dolore labore illo molestias, 
-                                    molestiae soluta, repellat modi accusantium quod quibusdam corporis.
-                                </div>
-                            </div>
-                        </article>
-                        <article class="works__item">
-                            <a href="" class="works__image _ibg">
-                                <img src="img/works/02.jpg" alt="Works #2">
-                            </a>
-                            <div class="works__body">
-                                <div class="works__title">Designing Dashboards</div>
-                                <div class="works__info">
-                                    <div class="works__year">2020</div>
-                                    <div class="works__category">Dashboard</div>
-                                </div>
-                                <div class="works__text text">
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                                    Fuga dolorum suscipit, architecto nemo dolore labore illo molestias, 
-                                    molestiae soluta, repellat modi accusantium quod quibusdam corporis.
-                                </div>
-                            </div>
-                        </article>
-                        <article class="works__item">
-                            <a href="" class="works__image _ibg">
-                                <img src="img/works/03.jpg" alt="Works #3">
-                            </a>
-                            <div class="works__body">
-                                <div class="works__title">Designing Dashboards</div>
-                                <div class="works__info">
-                                    <div class="works__year">2020</div>
-                                    <div class="works__category">Dashboard</div>
-                                </div>
-                                <div class="works__text text">
-                                    Lorem ipsum dolor, sit amet consectetur adipisicing elit. 
-                                    Fuga dolorum suscipit, architecto nemo dolore labore illo molestias, 
-                                    molestiae soluta, repellat modi accusantium quod quibusdam corporis.
-                                </div>
-                            </div>
-                        </article>
-                    </div>
-                </div>
-            </section>
+            </div>
         </main>
         @@include('footer.html',{})
     </div>  
